some starting stuff like string processing and rough class prototypes for reading in the equation. No clue if anything works yet

--- a/README
+++ b/README
@@ -3,3 +3,9 @@ SAT - Sovler
 parse eingabe, lexen, gegebenenfalls vereinfachen und SAT berechen
 
 Ausgabe als wahrheitstabelle und einfache ausgabe im Falle des SAT
+
+Operatoren: 
+	!A	nicht A
+	A&B	A und B
+	A|B 	A oder B
+	()	Klammern
